testsuite/poke.pkl/map-diag-6.pk
/* { dg-do compile } */

var a = int @
           1234; /* { dg-error "invalid argument.*\n.*expected offset" } */
